# hermes-cursor-harness

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  install.sh  plugin.yaml  pyproject.toml
.cursor/: environment.json  mcp.json
.cursor/rules/: hermes-harness.mdc
.github/workflows/: ci.yml  cursor-compatibility.yml
cursor-plugin/hermes-harness/: index.json
dashboard/: manifest.json  plugin_api.py
docs/: DEMO.md  DISTRIBUTION.md  LAUNCH.md  RELEASE.md
examples/: cursor_harness.json
examples/demo_project/: README.md  cursor_harness.demo.json  hello.py  test_hello.py
hermes_cursor_harness/: __init__.py  acp_client.py  approval.py  approval_queue.py  background.py  child_env.py  cli.py  companion.py  compatibility.py  config.py  config_validator.py  credentials.py  diagnostics.py  events.py  harness.py  mcp_server.py  models.py  plugin.py  proposal_queue.py  provider_route.py  schemas.py  sdk_bridge.mjs  sdk_runner.py  security.py  smoke.py  store.py  stream_runner.py  tools.py
integrations/hermes-core/: UPSTREAMING.md  cursor-provider-route.md
integrations/hermes-ui/: proposal-inbox-contract.md  proposal-inbox-sample.json
scripts/: demo_approval_bridge.sh  local_live_demo.sh  release_check.sh
skills/: cursor-harness.md
tests/: test_acp_client.py  test_approval.py  test_approval_queue.py  test_background.py  test_child_env.py  test_cli.py  test_companion.py  test_compatibility.py  test_config.py  test_credentials.py  test_diagnostics.py  test_events.py  test_harness.py  test_mcp_server.py  test_models.py  test_plugin_registration.py  test_proposal_queue.py  test_provider_route.py  test_sdk_runner.py  test_security.py  test_session_store.py  test_smoke.py  test_stream_runner.py  test_tools.py
tests/fakes/: fake_cursor_acp.py  fake_cursor_sdk_bridge.py  fake_cursor_stream.py
(+4 files in other folders)
